# tech-challenge-churn

./: .gitignore  Makefile  README.md  download_dataset.py  pyproject.toml  setup_project.py
docs/: ml_canvas.md  model_card.md  monitoring.md
models/: all_results.csv  baseline_results.csv
notebooks/: 01_eda.ipynb  02_baselines.ipynb  03_mlp.ipynb  mlflow.db
src/models/: predict.py  train_baseline.py  train_mlp.py
src/tech_challenge_churn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
